fixing mobile jump

--- a/css/style.css
+++ b/css/style.css
@@ -108,3 +108,38 @@
     right: 100%;
   }
 }
+
+@media (max-width: 500px) {
+  @keyframes jump {
+    0% {
+      bottom: 0;
+    }
+  
+    40% {
+      bottom: 240px;
+    }
+
+    45% {
+      bottom: 240px;
+    }
+  
+    50% {
+      bottom: 240px;
+    }
+
+    55% {
+      bottom: 240px;
+    }
+  
+    60% {
+      bottom: 240px;
+    }
+  
+    100% {
+      bottom: 0;
+    }
+  }
+  .mario {
+    width: 120px;
+  }
+}
